解决了一些依赖问题,修复了opencv相关报错

--- a/AutoWSGR/data/ocr/shipname_example.yaml
+++ b/AutoWSGR/data/ocr/shipname_example.yaml
@@ -23,7 +23,7 @@ No.12: # 俄克拉荷马
 No.13: # 安德烈亚·多利亚
   - 安德烈亚·多利亚
 No.100: # 狮(战列舰)
-  - 狮(战列舰)
+  - 狮
 No.101: # 长门
   - 长门
 No.102: # 陆奥
@@ -59,7 +59,7 @@ No.205: # 约克公爵
 No.206: # 北卡罗来纳
   - 北卡罗来纳
 No.207: # 南达科他(BB-57)
-  - 南达科他(BB-57)
+  - 南达科他
 No.208: # 马萨诸塞
   - 马萨诸塞
 No.209: # 密苏里
@@ -107,7 +107,7 @@ No.454: # 征服者
 No.460: # 宾夕法尼亚
   - 宾夕法尼亚
 No.464: # 南达科他(BB-49)
-  - 南达科他(BB-49)
+  - 南达科他
 No.468: # 猎户座
   - 猎户座
 No.478: # 阿方索十三世
@@ -143,7 +143,7 @@ No.1013: # 安德烈亚·多利亚
 No.1014: # 金刚
   - 金刚
 No.1100: # 狮(战列舰)
-  - 狮(战列舰)
+  - 狮
 No.1101: # 长门
   - 长门
 No.1102: # 陆奥
@@ -169,7 +169,7 @@ No.1113: # 黎塞留
 No.1206: # 北卡罗来纳
   - 北卡罗来纳
 No.1207: # 南达科他(BB-57)
-  - 南达科他(BB-57)
+  - 南达科他
 No.1211: # 卡约·杜伊里奥
   - 卡约·杜伊里奥
 No.1380: # 圣乔治
@@ -213,7 +213,7 @@ No.130: # 斯佩伯爵海军上将
 No.154: # 勇敢
   - 勇敢
 No.155: # 光荣(大型轻巡洋舰)
-  - 光荣(大型轻巡洋舰)
+  - 光荣
 No.318: # 毛奇
   - 毛奇
 No.331: # 无比
@@ -229,7 +229,7 @@ No.435: # B65
 No.436: # 十三号战舰
   - 十三号战舰
 No.446: # 狮(战列巡洋舰)
-  - 狮(战列巡洋舰)
+  - 狮
 No.461: # 无敌
   - 无敌
 No.484: # 安森
@@ -265,7 +265,7 @@ No.22: # 赤城
 No.23: # 加贺
   - 加贺
 No.29: # 列克星敦(CV-2)
-  - 列克星敦(CV-2)
+  - 列克星敦
 No.30: # 萨拉托加
   - 萨拉托加
 No.31: # 大黄蜂
@@ -293,7 +293,7 @@ No.226: # 埃塞克斯
 No.232: # 贝亚恩
   - 贝亚恩
 No.325: # 列克星敦(CV-16)
-  - 列克星敦(CV-16)
+  - 列克星敦
 No.339: # 帝国
   - 帝国
 No.374: # 汉考克
@@ -323,7 +323,7 @@ No.1023: # 加贺
 No.1028: # 突击者
   - 突击者
 No.1029: # 列克星敦(CV-2)
-  - 列克星敦(CV-2)
+  - 列克星敦
 No.1030: # 萨拉托加
   - 萨拉托加
 No.1031: # 大黄蜂
@@ -639,7 +639,7 @@ No.55: # 奥马哈
 No.56: # 亚特兰大
   - 亚特兰大
 No.57: # 朱诺(CL-52)
-  - 朱诺(CL-52)
+  - 朱诺
 No.58: # 布鲁克林
   - 布鲁克林
 No.59: # 海伦娜
@@ -773,13 +773,14 @@ No.473: # 阿非利加征服者西庇阿
 No.481: # 仁淀
   - 仁淀
 No.482: # 大淀(苍青幻影)
-  - 大淀(苍青幻影)
+  - 大淀
 No.491: # 夏伯阳
   - 夏伯阳
 No.492: # 壮丽
   - 壮丽
 No.495: # 光荣(轻巡洋舰)
-  - 光荣(轻巡洋舰)
+  - 光荣
+  
 No.504: # 费城
   - 费城
 No.512: # 科伦坡
@@ -789,7 +790,7 @@ No.515: # 伏罗希洛夫
 No.516: # 日丹诺夫
   - 日丹诺夫
 No.526: # 朱诺(CL-119)
-  - 朱诺(CL-119)
+  - 朱诺
 No.527: # CNT巡洋舰
   - CNT巡洋舰
 No.1041: # 天龙
@@ -815,7 +816,7 @@ No.1055: # 奥马哈
 No.1056: # 亚特兰大
   - 亚特兰大
 No.1057: # 朱诺(CL-52)
-  - 朱诺(CL-52)
+  - 朱诺
 No.1058: # 布鲁克林
   - 布鲁克林
 No.1059: # 海伦娜
@@ -985,9 +986,9 @@ No.181: # 威廉·D·波特
 No.182: # 波特
   - 波特
 No.183: # 拉菲(DD-724)
-  - 拉菲(DD-724)
+  - 拉菲
 No.184: # 拉菲(DD-459)
-  - 拉菲(DD-459)
+  - 拉菲
 No.185: # 卡米契亚·内拉
   - 卡米契亚·内拉
 No.186: # 阿维埃尔
@@ -1225,7 +1226,7 @@ No.1181: # 威廉·D·波特
 No.1182: # 波特
   - 波特
 No.1183: # 拉菲(DD-724)
-  - 拉菲(DD-724)
+  - 拉菲
 No.1185: # 卡米契亚·内拉
   - 卡米契亚·内拉
 No.1187: # 安东尼奥·达诺利
@@ -1374,3 +1375,15 @@ No.307: # 女灶神
   - 女灶神
 No.441: # 托戈
   - 托戈
+Other: # 战例
+  - 肌肉记忆
+  - 长跑训练
+  - 航空训练
+  - 训练的结晶
+  - 黑科技
+  - 防空伞
+  - 守护之盾
+  - 抱头蹲防
+  - 关键一击
+  - 久远的加护
+
