--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,7 @@ autowsgr/bin/image_recognize/*.PNG
 autowsgr/bin/image_recognize/*.in
 autowsgr/bin/image_recognize/*.out
 system_test.py
-
-# Package Release
-poetry.toml
-poetry.lock
+uv.lock
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
