--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,124 +53,57 @@ version = {attr = "autowsgr.__version__"}
     "c_src/**",
 ]
 
-[tool.black]
-line-length = 100
-skip-string-normalization = true
-target-version = ["py310"]
-
-[tool.isort]
-atomic = true
-profile = "black"
-src_paths = ["autowsgr", "examples"]
-known_first_party = ["autowsgr"]
-extra_standard_library = ["typing_extensions"]
-indent = 4
-line_length = 100
-lines_after_imports = 2
-multi_line_output = 3
-
 [tool.codespell]
 ignore-words = "docs/spelling_wordlist.txt"
 
 [tool.ruff]
-target-version = "py310"
+target-version = "py312"
 line-length = 100
 output-format = "full"
-src = ["autowsgr", "examples"]
+src = ["autowsgr", "tools"]
+
+[tool.ruff.format]
+quote-style = "single"
+docstring-code-format = false
+skip-magic-trailing-comma = false
 
 [tool.ruff.lint]
 select = [
     "E", "W",  # pycodestyle
     "F",       # pyflakes
+    "I",       # isort
     "N",       # pep8-naming
     "UP",      # pyupgrade
     "ANN",     # flake8-annotations
-    "S",       # flake8-bandit
     "BLE",     # flake8-blind-except
     "B",       # flake8-bugbear
     "COM",     # flake8-commas
     "C4",      # flake8-comprehensions
     "EXE",     # flake8-executable
     "FA",      # flake8-future-annotations
-    "LOG",     # flake8-logging
     "ISC",     # flake8-implicit-str-concat
-    "INP",     # flake8-no-pep420
+    "LOG",     # flake8-logging
     "PIE",     # flake8-pie
     "PYI",     # flake8-pyi
     "Q",       # flake8-quotes
     "RSE",     # flake8-raise
-    "RET",     # flake8-return
     "SIM",     # flake8-simplify
     "TID",     # flake8-tidy-imports
-    "TCH",     # flake8-type-checking
+    "TC",      # flake8-type-checking
+    "T20",     # flake8-print
     "PERF",    # perflint
     "FURB",    # refurb
     "TRY",     # tryceratops
     "RUF",     # ruff
+    "ASYNC",   # flake8-async
 ]
+preview = true
+explicit-preview-rules = true
 ignore = [
-    # E501: line too long
-    # W505: doc line too long
-    # too long docstring due to long example blocks
-    "E501",
-    "W505",
-    # ANN002 Missing type annotation for `*args`
-    # ANN003 Missing type annotation for `**kwargs`
-    "ANN002",
-    "ANN003",
-    # ANN401: dynamically typed expressions (typing.Any) are disallowed
-    "ANN401",
-    # S101: use of `assert` detected
-    # internal use and may never raise at runtime
-    "S101",
-    # S311: random number generator not cryptographically secure
-    # not a security-sensitive application
-    "S311",
-    # SIM105: use `contextlib.suppress(...)` instead of try-except-pass
-    # reduce unnecessary function call
-    "SIM105",
-    # TRY003: avoid specifying long messages outside the exception class
-    # long messages are necessary for clarity
-    "TRY003",
-    # RUF001 String contains ambiguous `：` (FULLWIDTH COLON)
-    # RUF002 Docstring contains ambiguous `，` (FULLWIDTH COMMA)
-    # RUF003 Comment contains ambiguous `，` (FULLWIDTH COMMA)
-    # allow Chinese characters in docstrings
-    "RUF001",
-    "RUF002",
-    "RUF003",
-    # S307 Use of possibly insecure function; consider using `ast.literal_eval`
-    # S602 `subprocess` call with `shell=True` identified, security issue
-    # S603 `subprocess` call: check for execution of untrusted input
-    # S605 Starting a process with a shell, possible injection detected
-    # S607 Starting a process with a partial executable path
-    # allow some unsafe cases
-    "S307",
-    "S602",
-    "S603",
-    "S605",
-    "S607",
-    # N801 Class name `EventFightInfo20230117_2` should use CapWords convention
-    # N806 Variable `SIZE` in function should be lowercase
-    # allow some abuse of naming conventions
-    "N801",
-    "N806",
-    # ANN001 Missing type annotation for function argument
-    # ANN201 Missing return type annotation for public function
-    # ANN202 Missing return type annotation for private function
     # TODO: temporarily ignore until all annotations are added
     "ANN001",
     "ANN201",
     "ANN202",
-    # E722 Do not use bare `except`
-    # BLE001 Do not catch blind exception
-    # B904 Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None`
-    # TRY002 Create your own exception
-    # TRY201 Use `raise` without specifying exception name
-    # TRY300 Consider moving this statement to an `else` block
-    # TRY301 Abstract `raise` to an inner function
-    # TRY400 Use `logging.exception` instead of `logging.error`
-    # PERF203 `try`-`except` within a loop incurs performance overhead
     # TODO: temporarily ignore until all exceptions are handled
     "E722",
     "BLE001",
@@ -181,22 +114,77 @@ ignore = [
     "TRY301",
     "TRY400",
     "PERF203",
+    "T201",    # `print` found
+    "N801",    # Class name `EventFightPlan2025_0424` should use CapWords convention
+    "N806",    # Variable `EXP_AREA` in function should be lowercase
+
+    "ANN002",  # missing-type-args
+    "ANN003",  # missing-type-kwargs
+    "ANN204",  # missing-return-type-special-method
+    "ANN401",  # any-type
+    "B027",    # empty-method-without-abstract-decorator
+    "B905",    # zip-without-explicit-strict, we use `zip-strict-fixer` instead
+    "C401",    # unnecessary set comprehension
+    "C416",    # unnecessary-comprehension
+    "COM812",  # missing-trailing-comma
+    "E501",    # line-too-long
+    "N802",    # invalid-function-name
+    "RUF005",  # collection-literal-concatenation
+    "RUF052",  # https://docs.astral.sh/ruff/rules/used-dummy-variable/
+    "SIM105",  # suppressible-exception
+    "SIM108",  # if-else-block-instead-of-if-exp
+    "TID252",  # relative-imports
+    "TRY301",  # raise-within-try
+    "TRY003",  # raise-vanilla-args
+    "TRY400",  # error-instead-of-exception
+    "W505",    # doc-line-too-long
+]
+allowed-confusables = ["，", "。", "：", "？", "！", "、", "（", "）", "；", "“", "”"]
+extend-safe-fixes = [
+    "C408",     # unnecessary-collection-call
+    "E711",     # none-comparison
+    "FURB129",  # readlines-in-for
+    "PERF102",  # incorrect-dict-iterator
+    "PIE810",   # multiple-starts-ends-with
+    "SIM102",   # collapsible-if
+    "TC001",    # typing-only-first-party-import
+    "TC002",    # typing-only-third-party-import
+    "TC003",    # typing-only-standard-library-import
+    "TC004",    # runtime-import-in-type-checking-block
+    "TRY201",   # verbose-raise
+    "UP004",    # useless-object-inheritance
+    "UP008",    # super-call-with-parameters
+    "UP038",    # non-pep604-isinstance
+    "UP039",    # unnecessary-class-parentheses
 ]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = [
     "F401",    # unused-import
 ]
-"examples/**/*.py" = [
-    "ANN",     # flake8-annotations
-    "TID252",  # relative-imports
-]
-"docs/conf.py" = [
-    "INP001",  # flake8-no-pep420
-]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 17
+
+[tool.ruff.lint.pylint]
+max-args = 15
+max-positional-args = 7
+max-statements = 60
+
+[tool.ruff.lint.isort]
+known-first-party = ["autowsgr"]
+known-local-folder = ["autowsgr", "tools", "examples"]
+lines-after-imports = 2
 
 [tool.ruff.lint.flake8-annotations]
 allow-star-arg-any = true
+suppress-dummy-args = true
+suppress-none-returning = true
+
+
+[tool.ruff.lint.flake8-type-checking]
+runtime-evaluated-base-classes = ["pydantic.BaseModel"]
+runtime-evaluated-decorators = ["pydantic.validate_call"]
 
 [tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
