feat:支持最新版mumu (#261)
* 支持最新版mumu

* 支持最新版mumu

--- a/autowsgr/data/ocr/ship_name.yaml
+++ b/autowsgr/data/ocr/ship_name.yaml
@@ -1218,6 +1218,14 @@ No.611: # 迪盖·特鲁安
   - "迪盖·特鲁安"
 No.612: # 巴格利
   - "巴格利"
+No.613: # 武藏
+  - "武藏"
+No.614: # 布列塔尼
+  - "布列塔尼"
+No.615: # 冲锋
+  - "冲锋"
+No.616: # 狭雾
+  - "狭雾"
 No.1001: # 胡德
   - "胡德"
 No.1002: # 扶桑
