feat: 支持11周年活动 (#268)
* chore: 修正地图

* feat: 20250930勇往直前周年活动

* bump version

--- a/autowsgr/data/map/event/20250930/E-1.yaml
+++ b/autowsgr/data/map/event/20250930/E-1.yaml
@@ -1,30 +1,33 @@
 A: !!python/tuple
-- 641
-- 262
+- 270
+- 135
 B: !!python/tuple
-- 607
-- 176
+- 60
+- 367
 C: !!python/tuple
-- 585
-- 375
+- 262
+- 352
 D: !!python/tuple
-- 487
-- 217
+- 180
+- 480
 E: !!python/tuple
-- 660
-- 457
+- 450
+- 127
 F: !!python/tuple
-- 446
-- 307
+- 517
+- 285
 G: !!python/tuple
-- 247
-- 262
+- 450
+- 487
 H: !!python/tuple
-- 795
-- 442
+- 637
+- 187
 I: !!python/tuple
-- 262
-- 457
-J: !!python/tuple
-- 90
+- 780
 - 307
+J: !!python/tuple
+- 577
+- 330
+K: !!python/tuple
+- 720
+- 465
