--- a/autowsgr/data/map/event/20250930/E-3.yaml
+++ b/autowsgr/data/map/event/20250930/E-3.yaml
@@ -1,36 +1,42 @@
 A: !!python/tuple
-- 802
-- 195
+- 727
+- 262
 B: !!python/tuple
-- 585
-- 345
-C: !!python/tuple
-- 675
-- 232
-D: !!python/tuple
-- 540
-- 120
-E: !!python/tuple
-- 472
-- 217
-F: !!python/tuple
-- 375
+- 607
 - 397
+C: !!python/tuple
+- 667
+- 502
+D: !!python/tuple
+- 742
+- 90
+E: !!python/tuple
+- 555
+- 195
+F: !!python/tuple
+- 450
+- 300
 G: !!python/tuple
-- 390
-- 285
+- 405
+- 435
 H: !!python/tuple
-- 307
-- 202
+- 240
+- 502
 I: !!python/tuple
-- 172
-- 307
+- 240
+- 360
 J: !!python/tuple
-- 465
-- 480
+- 375
+- 195
 K: !!python/tuple
-- 285
-- 82
+- 240
+- 67
 L: !!python/tuple
-- 142
-- 165
+- 217
+- 195
+M: !!python/tuple
+- 97
+- 285
+N: !!python/tuple
+- 82
+- 75
