--- a/autowsgr/data/map/event/20250930/E-4.yaml
+++ b/autowsgr/data/map/event/20250930/E-4.yaml
@@ -1,39 +1,45 @@
 A: !!python/tuple
-- 172
-- 202
-B: !!python/tuple
-- 292
-- 217
-C: !!python/tuple
-- 375
-- 480
-D: !!python/tuple
+- 585
 - 435
-- 135
-E: !!python/tuple
-- 480
-- 285
-F: !!python/tuple
-- 577
-- 390
-G: !!python/tuple
-- 675
-- 127
-H: !!python/tuple
+B: !!python/tuple
+- 727
+- 300
+C: !!python/tuple
+- 862
+- 292
+D: !!python/tuple
 - 712
-- 262
+- 180
+E: !!python/tuple
+- 517
+- 382
+F: !!python/tuple
+- 487
+- 210
+G: !!python/tuple
+- 525
+- 90
+H: !!python/tuple
+- 352
+- 165
 I: !!python/tuple
+- 330
 - 262
-- 82
 J: !!python/tuple
-- 840
-- 75
+- 352
+- 375
 K: !!python/tuple
-- 832
-- 405
+- 322
+- 67
 L: !!python/tuple
-- 735
-- 495
+- 330
+- 487
 M: !!python/tuple
-- 885
-- 195
+- 135
+- 480
+N: !!python/tuple
+- 165
+- 262
+O: !!python/tuple
+- 112
+- 82
