--- a/autowsgr/data/map/event/20250930/E-6.yaml
+++ b/autowsgr/data/map/event/20250930/E-6.yaml
@@ -1,45 +1,51 @@
 A: !!python/tuple
-- 727
-- 127
+- 135
+- 300
 B: !!python/tuple
-- 705
-- 232
+- 210
+- 247
 C: !!python/tuple
-- 675
-- 352
+- 255
+- 150
 D: !!python/tuple
-- 525
-- 90
+- 285
+- 397
 E: !!python/tuple
-- 540
-- 225
+- 420
+- 255
 F: !!python/tuple
-- 555
-- 345
+- 435
+- 157
 G: !!python/tuple
-- 742
+- 412
 - 502
 H: !!python/tuple
-- 532
-- 465
-I: !!python/tuple
-- 337
-- 120
-J: !!python/tuple
-- 397
-- 247
-K: !!python/tuple
-- 367
-- 405
-L: !!python/tuple
-- 202
-- 75
-M: !!python/tuple
-- 202
-- 202
-N: !!python/tuple
-- 352
-- 495
-O: !!python/tuple
-- 180
+- 525
 - 420
+I: !!python/tuple
+- 607
+- 105
+J: !!python/tuple
+- 607
+- 202
+K: !!python/tuple
+- 630
+- 292
+L: !!python/tuple
+- 795
+- 60
+M: !!python/tuple
+- 720
+- 465
+N: !!python/tuple
+- 915
+- 405
+O: !!python/tuple
+- 900
+- 330
+P: !!python/tuple
+- 817
+- 225
+Q: !!python/tuple
+- 907
+- 82
