feat: 更新ship_name.yaml

--- a/examples/ship_name.yaml
+++ b/examples/ship_name.yaml
@@ -1218,6 +1218,26 @@ No.611: # 迪盖·特鲁安
   - "迪盖·特鲁安"
 No.612: # 巴格利
   - "巴格利"
+No.613: # 武藏
+  - "武藏"
+No.614: # 布列塔尼
+  - "布列塔尼"
+No.615: # 冲锋
+  - "冲锋"
+No.616: # 狭雾
+  - "狭雾"
+No.617: # 南京
+  - "南京"
+No.618: # 米切尔
+  - "米切尔"
+No.619: # 罗斯福
+  - "罗斯福"
+No.620: # 铁公爵
+  - "铁公爵"
+No.621: # 长矛
+  - "长矛"
+No.622: # 杜布雷
+  - "杜布雷"
 No.1001: # 胡德
   - "胡德"
 No.1002: # 扶桑
@@ -1510,6 +1530,8 @@ No.1198: # U-505
   - "U-505"
 No.1199: # 絮库夫
   - "絮库夫"
+No.1205: # 约克公爵
+  - "约克公爵"
 No.1206: # 北卡罗来纳
   - "北卡罗来纳"
 No.1207: # 南达科他(BB-57)
@@ -1518,6 +1540,8 @@ No.1209: # 密苏里
   - "密苏里"
 No.1211: # 卡约·杜伊里奥
   - "卡约·杜伊里奥"
+No.1215: # 玛丽亚皇后
+  - "玛丽亚皇后"
 No.1219: # 瑞鹤
   - "瑞鹤"
 No.1220: # 翔鹤
@@ -1616,6 +1640,8 @@ No.1351: # U-1405
   - "U-1405"
 No.1362: # 星座
   - "星座"
+No.1363: # 炽热
+  - "炽热"
 No.1366: # 鹦鹉螺
   - "鹦鹉螺"
 No.1372: # 早春
