refactor: 重构normal fight点位识别 (#282)
* refactor: 暂时停用多线程加速点击

* refactor: 重构normal fight点位识别

* fix: 修复旧格式兼容

* fix: 添加节点重置

* fix: 记录上次图标位置，防止迂回失败时继续更新点位

* 补上reset

--- a/autowsgr/data/map/normal/1-2.yaml
+++ b/autowsgr/data/map/normal/1-2.yaml
@@ -1,12 +1,30 @@
-A: !!python/tuple
-- 254
-- 273
-B: !!python/tuple
-- 368
-- 342
-C: !!python/tuple
-- 352
-- 183
-D: !!python/tuple
-- 501
-- 396
+'0':
+  position:
+  - 232
+  - 383
+  next:
+  - A
+  - B
+A:
+  position:
+  - 254
+  - 273
+  next:
+  - C
+B:
+  position:
+  - 368
+  - 342
+  next:
+  - C
+  - D
+C:
+  position:
+  - 352
+  - 183
+  next: []
+D:
+  position:
+  - 501
+  - 396
+  next: []
