--- a/autowsgr/data/map/normal/4-1.yaml
+++ b/autowsgr/data/map/normal/4-1.yaml
@@ -1,30 +1,67 @@
-A: !!python/tuple
-- 641
-- 262
-B: !!python/tuple
-- 607
-- 176
-C: !!python/tuple
-- 585
-- 375
-D: !!python/tuple
-- 487
-- 217
-E: !!python/tuple
-- 660
-- 457
-F: !!python/tuple
-- 446
-- 307
-G: !!python/tuple
-- 247
-- 262
-H: !!python/tuple
-- 795
-- 442
-I: !!python/tuple
-- 262
-- 457
-J: !!python/tuple
-- 90
-- 307
+'0':
+  position:
+  - 757
+  - 127
+  next:
+  - A
+  - B
+A:
+  position:
+  - 641
+  - 262
+  next:
+  - C
+B:
+  position:
+  - 607
+  - 176
+  next:
+  - D
+C:
+  position:
+  - 585
+  - 375
+  next:
+  - E
+  - F
+D:
+  position:
+  - 487
+  - 217
+  next:
+  - F
+  - G
+E:
+  position:
+  - 660
+  - 457
+  next:
+  - H
+F:
+  position:
+  - 446
+  - 307
+  next:
+  - I
+G:
+  position:
+  - 247
+  - 262
+  next:
+  - I
+  - J
+H:
+  position:
+  - 795
+  - 442
+  next: []
+I:
+  position:
+  - 262
+  - 457
+  next: []
+J:
+  position:
+  - 90
+  - 307
+  next: []
