--- a/autowsgr/data/map/normal/7-2.yaml
+++ b/autowsgr/data/map/normal/7-2.yaml
@@ -1,39 +1,86 @@
-A: !!python/tuple
-- 517
-- 307
-B: !!python/tuple
-- 630
-- 247
-C: !!python/tuple
-- 502
-- 420
-D: !!python/tuple
-- 386
-- 352
-E: !!python/tuple
-- 457
-- 180
-F: !!python/tuple
-- 757
-- 210
-G: !!python/tuple
-- 660
-- 120
-H: !!python/tuple
-- 270
-- 315
-I: !!python/tuple
-- 333
-- 472
-J: !!python/tuple
-- 127
-- 367
-K: !!python/tuple
-- 255
-- 161
-L: !!python/tuple
-- 873
-- 131
-M: !!python/tuple
-- 112
-- 127
+'0':
+  position:
+  - 742
+  - 360
+  next:
+  - A
+  - B
+  - F
+A:
+  position:
+  - 517
+  - 307
+  next:
+  - C
+  - D
+  - E
+B:
+  position:
+  - 630
+  - 247
+  next:
+  - G
+C:
+  position:
+  - 502
+  - 420
+  next:
+  - I
+D:
+  position:
+  - 386
+  - 352
+  next:
+  - H
+E:
+  position:
+  - 457
+  - 180
+  next:
+  - H
+  - K
+F:
+  position:
+  - 757
+  - 210
+  next:
+  - G
+  - L
+G:
+  position:
+  - 660
+  - 120
+  next: []
+H:
+  position:
+  - 270
+  - 315
+  next:
+  - J
+  - K
+I:
+  position:
+  - 333
+  - 472
+  next: []
+J:
+  position:
+  - 127
+  - 367
+  next: []
+K:
+  position:
+  - 255
+  - 161
+  next:
+  - M
+L:
+  position:
+  - 873
+  - 131
+  next: []
+M:
+  position:
+  - 112
+  - 127
+  next: []
