--- a/autowsgr/data/map/normal/8-3.yaml
+++ b/autowsgr/data/map/normal/8-3.yaml
@@ -1,36 +1,83 @@
-A: !!python/tuple
-- 802
-- 195
-B: !!python/tuple
-- 585
-- 345
-C: !!python/tuple
-- 675
-- 232
-D: !!python/tuple
-- 540
-- 120
-E: !!python/tuple
-- 472
-- 217
-F: !!python/tuple
-- 375
-- 397
-G: !!python/tuple
-- 390
-- 285
-H: !!python/tuple
-- 307
-- 202
-I: !!python/tuple
-- 172
-- 307
-J: !!python/tuple
-- 465
-- 480
-K: !!python/tuple
-- 285
-- 82
-L: !!python/tuple
-- 142
-- 165
+'0':
+  position:
+  - 727
+  - 435
+  next:
+  - A
+  - B
+  - C
+A:
+  position:
+  - 802
+  - 195
+  next:
+  - D
+B:
+  position:
+  - 585
+  - 345
+  next:
+  - E
+  - F
+  - G
+C:
+  position:
+  - 675
+  - 232
+  next:
+  - E
+D:
+  position:
+  - 540
+  - 120
+  next:
+  - H
+  - K
+E:
+  position:
+  - 472
+  - 217
+  next:
+  - H
+F:
+  position:
+  - 375
+  - 397
+  next:
+  - I
+  - J
+G:
+  position:
+  - 390
+  - 285
+  next:
+  - H
+  - I
+H:
+  position:
+  - 307
+  - 202
+  next:
+  - K
+  - L
+I:
+  position:
+  - 172
+  - 307
+  next:
+  - L
+J:
+  position:
+  - 465
+  - 480
+  next: []
+K:
+  position:
+  - 285
+  - 82
+  next: []
+L:
+  position:
+  - 142
+  - 165
+  next: []
