feat: 更新版本，更新ship_name (#288)

--- a/autowsgr/data/ocr/ship_name.yaml
+++ b/autowsgr/data/ocr/ship_name.yaml
@@ -1238,6 +1238,14 @@ No.621: # 长矛
   - "长矛"
 No.622: # 杜布雷
   - "杜布雷"
+No.623: # 鲁莽
+  - "鲁莽"
+No.624: # 堡垒
+  - "堡垒"
+No.625: # 卡萨尔
+  - "卡萨尔"
+No.626: # 伊-17
+  - "伊-17"
 No.1001: # 胡德
   - "胡德"
 No.1002: # 扶桑
